# polymarket-shocks-vs-news

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: pages.yml
dashboard/: observablehq.config.js  package-lock.json  package.json
dashboard/src/: custom-style.css  index.md  methodology.md  strategy.md
dashboard/src/data/: by_category.csv  histogram.csv
output/: shocks_shortlist.parquet  watchlist.parquet  watchlist_sports.parquet
output/backtest/: by_category.csv  monthly.csv  per_wallet.csv  summary.json
output/backtest_sports/: by_category.csv  filtered_summary.json  latency_decay.csv  monthly.csv  monthly_filtered.csv  per_wallet.csv  per_wallet_filtered.csv  summary.json
output/dashboard/: by_category.csv  exemplars.json  markets_index.json  summary.json
output/dashboard/price_series/: 1169205.csv  1285674.csv  1321994.csv  1328039.csv  1341055.csv  1365919.csv  1399064.csv  1399065.csv  1429135.csv  1516728.csv  1534480.csv  1534481.csv  502038.csv  503254.csv  505567.csv  507276.csv  507545.csv  514139.csv  514824.csv  516065.csv  516100.csv  518869.csv  519694.csv  521601.csv  521607.csv  524996.csv  525280.csv  531735.csv  538308.csv  541466.csv  544462.csv  (+11 more)
output/phase0/: MEMO.md  watchlist_top5.csv
phase1/: README.md  ledger_viewer.py  paper_trader.py  watchlist.json
src/: alignment.py  copy_trade_backtest.py  extract_partial_wiki.py  filter_variance.py  latency_decay.py  news_gdelt.py  news_wikipedia.py  phase0_memo.py  sensitivity.py  shock_detection.py  strategy_dashboard_data.py  summarise.py  wallet_selection.py
(+50 files in other folders)
