[project]
name = "polymarket-fraud"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "datasets>=4.8.5",
    "huggingface-hub>=1.16.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
]
